--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
             Know the places your online pals come from a little better
           </h2>
           <div class="intro__quote">
-            <p class="intro__quote_text">
+            <p class="intro__quote-text">
               Every human being is an artist, a freedom being, called to
               participate in transforming and reshaping the conditions,
               thinking, and structures that shape and inform our lives.
             </p>
-            <p class="intro__quote_name">— Joseph Beuys</p>
+            <p class="intro__quote-name">— Joseph Beuys</p>
           </div>
           <p class="intro__description">
             The town of Practicum has brought together professionals from
