Revised code after first code review

--- a/index.html
+++ b/index.html
@@ -16,25 +16,25 @@
   <body class="page">
     <div class="page__content">
       <header class="header">
-        <div class="header__logo">
-          <img src="./images/logo.svg" alt="Practicum Logo" />
-        </div>
+        <img
+          src="./images/logo.svg"
+          alt="Practicum Logo"
+          class="header__logo"
+        />
       </header>
-      <section class="section">
-        <div class="lead">
+      <main class="content">
+        <section class="lead">
           <h1 class="lead__title">From Homeland to Homeland</h1>
-          <h2 class="lead__subtitle">
+          <p class="lead__subtitle">
             An epic journey from Kentucky to Burundi through Wales and Ukraine
-          </h2>
+          </p>
           <img
             class="lead__image"
             src="./images/header_image.png"
             alt="Black&White Horizon Photo"
           />
-        </div>
-      </section>
-      <section class="section">
-        <div class="intro">
+        </section>
+        <section class="intro">
           <h2 class="intro__title">
             Know the places your online pals come from a little better
           </h2>
@@ -57,77 +57,76 @@
             collection. No matter where you're from, we're glad that you're our
             neighbor.
           </p>
-        </div>
-      </section>
-      <section class="photo-grid section">
-        <ul class="photo-grid__list">
-          <li class="photo-grid__list-item photo-grid__beach">
-            <img
-              class="photo-grid__item"
-              src="./images/gallery_1.jpg"
-              alt="First Photo"
-            />
-          </li>
-          <li class="photo-grid__list-item photo-grid__ocean">
-            <img
-              class="photo-grid__item"
-              src="./images/gallery_2.jpg"
-              alt="Second Photo"
-            />
-          </li>
-          <li class="photo-grid__list-item photo-grid__field">
-            <img
-              class="photo-grid__item"
-              src="./images/gallery_3.jpg"
-              alt="Third Photo"
-            />
-          </li>
-          <li class="photo-grid__list-item photo-grid__park">
-            <img
-              class="photo-grid__item"
-              src="./images/gallery_4.jpg"
-              alt="Fourth Photo"
-            />
-          </li>
-          <li class="photo-grid__list-item photo-grid__sky">
-            <img
-              class="photo-grid__item"
-              src="./images/gallery_5.jpg"
-              alt="Fifth Photo"
-            />
-          </li>
-          <li class="photo-grid__list-item photo-grid__city">
-            <img
-              class="photo-grid__item"
-              src="./images/gallery_6.jpg"
-              alt="Sixth Photo"
-            />
-          </li>
-          <li class="photo-grid__list-item photo-grid__hut">
-            <img
-              class="photo-grid__item"
-              src="./images/gallery_7.jpg"
-              alt="Seventh Photo"
-            />
-          </li>
-          <li class="photo-grid__list-item photo-grid__house">
-            <img
-              class="photo-grid__item"
-              src="./images/gallery_8.jpg"
-              alt="Eighth Photo"
-            />
-          </li>
-        </ul>
-      </section>
-      <main class="content">
+        </section>
+        <section class="photo-grid section">
+          <ul class="photo-grid__list">
+            <li class="photo-grid__list-item">
+              <img
+                class="photo-grid__item"
+                src="./images/gallery_1.jpg"
+                alt="First Photo"
+              />
+            </li>
+            <li class="photo-grid__list-item">
+              <img
+                class="photo-grid__item"
+                src="./images/gallery_2.jpg"
+                alt="Second Photo"
+              />
+            </li>
+            <li class="photo-grid__list-item">
+              <img
+                class="photo-grid__item"
+                src="./images/gallery_3.jpg"
+                alt="Third Photo"
+              />
+            </li>
+            <li class="photo-grid__list-item">
+              <img
+                class="photo-grid__item"
+                src="./images/gallery_4.jpg"
+                alt="Fourth Photo"
+              />
+            </li>
+            <li class="photo-grid__list-item">
+              <img
+                class="photo-grid__item"
+                src="./images/gallery_5.jpg"
+                alt="Fifth Photo"
+              />
+            </li>
+            <li class="photo-grid__list-item">
+              <img
+                class="photo-grid__item"
+                src="./images/gallery_6.jpg"
+                alt="Sixth Photo"
+              />
+            </li>
+            <li class="photo-grid__list-item">
+              <img
+                class="photo-grid__item"
+                src="./images/gallery_7.jpg"
+                alt="Seventh Photo"
+              />
+            </li>
+            <li class="photo-grid__list-item">
+              <img
+                class="photo-grid__item"
+                src="./images/gallery_8.jpg"
+                alt="Eighth Photo"
+              />
+            </li>
+          </ul>
+        </section>
+
         <section class="places section">
           <div class="places__item">
             <h2 class="places__title">Kyiv, Ukraine</h2>
             <div class="places__artist">
-              <span class="places__artist-heading">Artist</span>
-              <span class="places__artist-name"
-                >Natalia Dolgushina, content producer</span
-              >
+              <p class="places__artist-heading">Artist</p>
+              <p class="places__artist-name">
+                Natalia Dolgushina, content producer
+              </p>
             </div>
             <img
               src="./images/kyiv.jpg"
@@ -158,13 +157,11 @@
           <div class="places__item">
             <h2 class="places__title">Cricieth, Wales</h2>
             <div class="places__artist">
-              <span class="places__artist-heading">Artist</span>
-              <span class="places__artist-name"
-                >Steffan Warren, lead editor,</span
-              >
-              <span class="places__artist-name">
-                Kseniya Glagoleva, project manager</span
-              >
+              <p class="places__artist-heading">Artist</p>
+              <p class="places__artist-name">Steffan Warren, lead editor,</p>
+              <p class="places__artist-name">
+                Kseniya Glagoleva, project manager
+              </p>
             </div>
             <img
               src="./images/cricieth.jpg"
@@ -195,10 +192,10 @@
           <div class="places__item">
             <h2 class="places__title">Berea, USA</h2>
             <div class="places__artist">
-              <span class="places__artist-heading">Artist</span>
-              <span class="places__artist-name"
-                >Travis Turner, author and editor</span
-              >
+              <p class="places__artist-heading">Artist</p>
+              <p class="places__artist-name">
+                Travis Turner, author and editor
+              </p>
             </div>
             <img
               src="./images/berea.jpg"
@@ -229,10 +226,8 @@
           <div class="places__item">
             <h2 class="places__title">Muramvya, Burundi</h2>
             <div class="places__artist">
-              <span class="places__artist-heading">Artist</span>
-              <span class="places__artist-name"
-                >Grevisse Kenguruka, tech editor</span
-              >
+              <p class="places__artist-heading">Artist</p>
+              <p class="places__artist-name">Grevisse Kenguruka, tech editor</p>
             </div>
             <img
               src="./images/muramvya.jpg"
@@ -270,10 +265,8 @@
           <div class="places__item">
             <h2 class="places__title">Columbus, USA</h2>
             <div class="places__artist">
-              <span class="places__artist-heading">Artist</span>
-              <span class="places__artist-name"
-                >Josh Keller, Practicum Student</span
-              >
+              <p class="places__artist-heading">Artist</p>
+              <p class="places__artist-name">Josh Keller, Practicum Student</p>
             </div>
             <img
               src="./images/columbus.jpg"
@@ -311,7 +304,9 @@
           </div>
         </section>
       </main>
-      <footer class="footer">© 2022 Josh Keller</footer>
+      <footer class="footer">
+        <p class="footer__text">© 2022 Josh Keller</p>
+      </footer>
     </div>
   </body>
 </html>
